Nicer device status responses and CORS headers